--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "main": "puppeteer-script.js",
   "dependencies": {
     "puppeteer": "^21.0.0",
-    "express": "^4.19.2"
+    "googleapis": "^128.0.0"
   }
 }
