--- a/.github/workflows/generate-video.yml
+++ b/.github/workflows/generate-video.yml
@@ -1,6 +1,4 @@
-# .github/workflows/generate-video.yml
-
-name: Generate Video
+name: Generate and Upload Video
 
 on:
   workflow_dispatch:
@@ -16,38 +14,74 @@ on:
 jobs:
   generate-video:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '18'
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
-    - name: Install dependencies
-      # MUDANÇA AQUI: 'npm install' vai ler o package.json e instalar tudo
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Install system tools
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y ffmpeg
+      - name: Install system tools (FFmpeg)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
 
-    - name: Generate video frames and compile
-      env:
-        THEME: ${{ github.event.inputs.theme || github.event.client_payload.theme || 'Curiosidades sobre o MAR' }}
-        ASPECT_RATIO: ${{ github.event.client_payload.aspect_ratio || '9:16' }}
-        DURATION_TYPE: ${{ github.event.client_payload.duration || 'curto' }}
-        LANGUAGE_VID: ${{ github.event.client_payload.language || 'portugues do Brazil' }}
-        GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-        GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
-      run: |
-        xvfb-run -a node puppeteer-script.js
+      - name: Generate video and script file
+        env:
+          THEME: ${{ github.event.inputs.theme || github.event.client_payload.theme || 'Curiosidades sobre o MAR' }}
+          ASPECT_RATIO: ${{ github.event.client_payload.aspect_ratio || '9:16' }}
+          DURATION_TYPE: ${{ github.event.client_payload.duration || 'curto' }}
+          LANGUAGE_VID: ${{ github.event.client_payload.language || 'português do Brasil' }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
+        run: xvfb-run -a node puppeteer-script.js
+      
+      - name: Upload Artifacts (Video and Script)
+        uses: actions/upload-artifact@v4
+        with:
+          name: video-data
+          path: output/
 
-    - name: Upload result
-      uses: actions/upload-artifact@v4
-      with:
-        name: generated-video
-        path: output/final-video.mp4
+  upload-to-youtube:
+    runs-on: ubuntu-latest
+    needs: generate-video # Este job só começa depois que 'generate-video' termina com sucesso
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Download Artifacts (Video and Script)
+        uses: actions/download-artifact@v4
+        with:
+          name: video-data # Baixa os artifacts salvos no job anterior
+          path: output/   # Salva os artifacts na pasta 'output'
+
+      - name: Run YouTube Uploader
+        env:
+          # Passa todas as variáveis e secrets necessários para o script de upload
+          LANGUAGE_VID: ${{ github.event.client_payload.language || 'português do Brasil' }}
+          THEME: ${{ github.event.client_payload.theme || 'Curiosidades gerais' }}
+          YOUTUBE_VISIBILITY: ${{ github.event.client_payload.youtube_visibility || 'private' }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+          GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+          GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+          YOUTUBE_REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
+        run: node youtube-uploader.js
+
+      - name: Limpar Artefato
+        uses: geekyeggo/delete-artifact@v5
+        with:
+         name: video-data
